<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DetailsFragment">
    <TextView
            android:text="@string/gameinfos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textColor="#00BCD4"
            android:textStyle="bold|italic" android:layout_marginTop="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:src="@tools:sample/avatars"
            android:id="@+id/image_details"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:contentDescription="@string/description5"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/image_details"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/image_details"
            android:layout_marginTop="24dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/image_details"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/playeurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toEndOf="@+id/image_details"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="8dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/image_details"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:textStyle="bold"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.42"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline4"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.1"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_name"
            app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_type"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_playeurs"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_year"
            app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_description"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/barrier" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_more" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_description" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline9"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barrier" app:barrierDirection="top"
                                              tools:layout_editor_absoluteY="432dp"
                                              tools:layout_editor_absoluteX="175dp"
                                              app:constraint_referenced_ids="button_more"/>
</androidx.constraintlayout.widget.ConstraintLayout>