<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".GameFragment">
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/V_guideline"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/H_guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.5"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:src="@tools:sample/avatars"
            android:id="@+id/imageView1" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/H_guideline" app:layout_constraintEnd_toStartOf="@+id/V_guideline"
            android:contentDescription="@string/description1"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline7" android:foregroundGravity="bottom"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:src="@tools:sample/avatars"
            android:id="@+id/imageView2" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/H_guideline"
            app:layout_constraintStart_toStartOf="@+id/V_guideline" android:layout_marginStart="4dp"
            android:contentDescription="@string/description2"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline7"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:src="@tools:sample/avatars"
            android:id="@+id/imageView3" android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="@+id/H_guideline" app:layout_constraintEnd_toStartOf="@+id/V_guideline"
            android:layout_marginEnd="4dp" android:contentDescription="@string/description3"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:src="@tools:sample/avatars"
            android:id="@+id/imageView4" android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="@+id/H_guideline" app:layout_constraintStart_toStartOf="@+id/V_guideline"
            android:layout_marginStart="4dp" android:contentDescription="@string/description4"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline5"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.09245742"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline6"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.91"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline7"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline8"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.75"/>
</androidx.constraintlayout.widget.ConstraintLayout>